--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "downshift": "^3.3.4",
     "react": "^16.9.0",
+    "react-autocomplete": "^1.8.1",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-datepicker": "^2.9.6",
     "react-dom": "^16.9.0",
     "react-modal": "^3.10.1",
     "react-scripts": "3.1.1",
+    "react-select": "^3.0.5",
     "react-trello": "^2.2.3"
   },
   "scripts": {
